--- a/src/main/resources/templates/estandars.hbs
+++ b/src/main/resources/templates/estandars.hbs
@@ -1,35 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="./../../../MainDesign.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar12">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
-          <i class="fa d-inline fa-lg fa-circle"></i>z
-          <b> SSG</b>
-        </a>
-        <ul class="navbar-nav mx-auto">
-          
-        </ul>
-        <ul class="navbar-nav">
-           
- 			<li class="nav-item"> <a href="/out">			
-				<button type="button" class="btn btn-default btn-sm">
-				<span class="glyphicon glyphicon-plus"></span> Log Out
-				</button></a> </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+{{#partial "contenido"}}
   <div class="py-5">
     <div class="container">
       <div class="row">
@@ -78,47 +47,14 @@
           		</button>
           
           </form>
-          
-          
-          
-          
-          
+
           		<button type="submit" class="btn btn-primary" onclick="location.href='/admin/Clientes/{{id}}'">Cancelar</button>	
-
-
-
-          	
-          	
+     	
         </div>
       </div>
     </div>
   </div>
-  <div class="py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="mb-0">© 2014-2018 SSG. All rights reserved</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <form class="" style="">
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"></div>
-      </div>
-    </div>
-  </div>
-</body>
+  	
+ {{/partial}}
 
-</html>
+{{>layout.hbs}}
