--- a/src/main/resources/templates/simplex.hbs
+++ b/src/main/resources/templates/simplex.hbs
@@ -1,32 +1,4 @@
-<html>
-	<head> 
-		<meta charset="utf-8">
-		<title> Consumo Recomendado </title>
-  		<meta name="viewport" content="width=device-width, initial-scale=1">
-  		<link rel="stylesheet" href="MainDesign.css">
-	</head>
-	
-	<body>
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar12">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
-          <i class="fa d-inline fa-lg fa-circle"></i>
-          <b> SSG      {{names}}       </b>
-        </a>
-        <ul class="navbar-nav mx-auto">
-        </ul>
-        <ul class="navbar-nav">
-           
- 			<li class="nav-item"> <a href="/userLogout">			
-				<button type="button" class="btn btn-default btn-sm">
-				<span class="glyphicon glyphicon-plus"></span> Log Out
-				</button></a> </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+{{#partial "contenido"}}
 		<br/>
 		<br/>
 		<div class="row">
@@ -48,14 +20,9 @@
 		</div>
 			
 		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/> 
-		<div class="py-3">
-    		<div class="container">
-      			<div class="row">
-        			<div class="col-md-12 text-center">
-          				<p class="mb-0">© 2018 DDS, Inc</p>
-        			</div>
-	      		</div>
-	    	</div>
-  		</div>
-	</body>
-</html>
+		
+{{/partial}}
+
+{{>layout.hbs}}
+		
+		
